# fastapi-lambda-apigw

./: .dockerignore  .gitignore  dockerfile  lambda_function.py  pyproject.toml  serve.py
api/: chat_service.py  config_parser.py  create_client.py  create_openai_client.py
