[tool.poetry]
name = "fastapi-lambda-apigw"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python =  "3.10.*"
fastapi = "0.111.0"
uvicorn = "0.29.0"
boto3 = "1.34.66"
mangum="0.17.0"
openai="1.25.1"
groq = "0.5.0"

[tool.poetry.group.dev.dependencies]
unittest-xml-reporting = "3.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
